# python2wb

./: README.md  pyproject.toml  rule.py  script.py
examples/: script.py
module/: py_wb_mqtt.py  python2wb.py
python2wb/: mqtt.py
src/python2wb/: __init__.py
