[tool.poetry]
name = "python2wb"
version = "0.1.7"
authors = ["Alexander Degtyarev <adegtyarev.ap@gmail.com>"]
description = "Module for Python integration with Wiren Board MQTT"
readme = "README.md"
keywords = ["mqtt", "wirenboard"]
packages = [{include = "python2wb"}]
repository = "https://github.com/aadegtyarev/python2wb"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"
paho-mqtt = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
